--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -R Nyan",
+    "test": "mocha",
     "coverage": "istanbul cover _mocha -- -R Nyan" 
   },
   "author": "",
