--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
-    "coverage": "istanbul cover _mocha -- -R Nyan" 
+    "test": "mocha -R Nyan",
+    "coverage": "istanbul cover _mocha -- -R Nyan"
   },
   "author": "",
   "license": "ISC",
